try 2 to fix mobile overlapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1226,7 +1226,7 @@ h1 {
 }
 
 @media screen and (max-width: 736px) {
-  #main .container > header.style1 {   /* targets the Pricing header */
-    margin-top: 2.5em;                 /* or try 3em / 4em if still too close */
-    padding-top: 1em;
+  #main header.style1:nth-of-type(2) {  /* the second .style1 header = Pricing */
+    margin-top: 3em !important;
   }
+}
